Update README file

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,5 +22,5 @@ jobs:
       run: cargo test --verbose
       
     - name: rust-clippy-check
-    - uses: actions-rs/clippy-check@v1.0.7
+      uses: actions-rs/clippy-check@v1.0.7
 
